--- a/locaçaoregiaodoslagos/style.css
+++ b/locaçaoregiaodoslagos/style.css
@@ -30,7 +30,7 @@ body{
     width: auto;
 }
 header{
-    background-color: blue;
+    background-color: rgb(23, 23, 167);
     padding: 20px;
     text-align: center;
     display: flex;
@@ -48,7 +48,7 @@ a{
     justify-content: space-around;
 }
 .flex{
-    background-color: blue;
+    background-color: rgb(23, 23, 167);
     color: white;
     padding: 15px;
     width: 35%;
@@ -59,7 +59,7 @@ a{
 .botao{
     height: 40px;
     border: none;
-    color: blue;
+    color: rgb(23, 23, 167);
     background-color: white;
     width: 100%;
     border-radius: 10px;
@@ -77,7 +77,7 @@ a{
 }
 .contato{
     display: flex;
-    background-color: blue;
+    background-color: rgb(23, 23, 167);
     flex-direction: row;
     height: 150px;
     width: 300px;
@@ -88,7 +88,7 @@ a{
     justify-content: center;
 }
 footer{
-    background-color: blue;
+    background-color: rgb(23, 23, 167);
     text-align: center;
     justify-content: end;
     padding-bottom: 5px;
